# rfsm-graphic

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
includes/: Config.hpp
src/: Config.cpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/engine/: InputVariable.cpp  InputVariable.hpp  Node.cpp  Node.hpp  State.cpp  State.hpp  StateChart.cpp  StateChart.hpp  Transition.cpp  Transition.hpp  Variable.cpp  Variable.hpp
src/gui/: AddStateTool.cpp  AddStateTool.hpp  AddTransitionTool.cpp  AddTransitionTool.hpp  Canvas.cpp  Canvas.hpp  DeletionTool.cpp  DeletionTool.hpp  MainWindow.cpp  MainWindow.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  SelectTool.cpp  SelectTool.hpp  SetInitialStateTool.cpp  SetInitialStateTool.hpp  StateUI.cpp  StateUI.hpp  Tool.cpp  Tool.hpp  Tools.hpp  TransitionUI.cpp  TransitionUI.hpp  addTransitionTool.cpp
test/: nodeTest.cpp  stateChartTest.cpp  stateTest.cpp  transitionTest.cpp  variableTest.cpp
